Fix Roboto font not showing

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-    font-family: 'Roboto', 'Courier New', Courier, monospace;
+    /* font-family: 'Roboto', 'Courier New', Courier, monospace; */
+    font-family: 'Roboto';
     display: flex;
     flex-direction: column;
     align-items: stretch;
